crates/tmark-writers/tests/snapshots/fixtures__fence-attributes@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tscode}[lang=md, class={snippet}, caption={A title}, width={60\%}]
# Hello
\end{tscode}

\begin{tscode}[lang=python, title={hanoi.py}, class={wide}]
print(1)
\end{tscode}

---requires---
{
  "packages": [
    "fvextra",
    "tcolorbox"
  ],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
