crates/tmark-writers/tests/snapshots/fixtures__fence-attributes@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-code(class: ("snippet",), caption: "A title", width: "60%")[
```md
# Hello
```
]

#ts-code(title: [hanoi.py], class: ("wide",))[
```python
print(1)
```
]

---requires---
{
  "packages": [
    "fvextra",
    "tcolorbox"
  ],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
