crates/tmark-writers/tests/snapshots/fixtures__fence-image@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tscode}[lang=mermaid]
flowchart LR
  A --> B
\end{tscode}

---requires---
{
  "packages": [],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
