crates/tmark-writers/tests/snapshots/fixtures__fence-image@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
```mermaid
flowchart LR
  A --> B
```

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
