crates/tmark-writers/tests/snapshots/fixtures__fence-include-snippet@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<pre><code class="language-python"></code></pre>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
